--- a/task1.html
+++ b/task1.html
@@ -8,8 +8,10 @@
     <style>
         table{
             width: 100%;
-   
-            border-collapse: separate;
+            border-collapse: collapse;
+            border-color:white;
+
+
         }
         td{
             text-align: left;
@@ -17,11 +19,11 @@
     </style>
 </head>
 <body>
-    <table style="background-color: aquamarine;">
+    <table style="background-color: aquamarine;" border>
         <tr>
-            <td> <b> Firstname</b></td>
-            <td> <b> Lastname </b></td>
-            <td> <b> Age </b></td>
+            <th> Firstname</td>
+            <th> Lastname </td>
+            <th>  Age </td>
         </tr>
         <tr>
             <td> Jill</td>
